--- a/vue3-chat-app/package.json
+++ b/vue3-chat-app/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "firebase": "^10.4.0",
     "roboto-fontface": "*",
     "vue": "^3.3.4",
-    "vuetify": "npm:@vuetify/nightly@next",
+    "vuetify": "3.3.17",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
